chrome browser eklendi.

--- a/IhalematikPro/App.config
+++ b/IhalematikPro/App.config
@@ -20,8 +20,8 @@
     <!--Email-->
     <add key="SmtpAdress" value="smtp.gmail.com" />
     <add key="SmtpPort" value="587" />
-    <!--<add key="Mode" value="DEVELOPMENT" />-->
-    <add key="Mode" value="PRODUCTION" />
+    <add key="Mode" value="DEVELOPMENT" />
+    <!--<add key="Mode" value="PRODUCTION" />-->
     <!--<add key="SmtpUserName" value="feyzullahgezici" />
     <add key="SmtpPassword" value="FG!Selcuk!86" />
     <add key="SmtpMailSender" value="feyzullahgezici@gmail.com" />-->
