--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -654,6 +654,12 @@
     <Compile Include="Forms\Tedarikci\frm_YeniTeklifOlustur.Designer.cs">
       <DependentUpon>frm_YeniTeklifOlustur.cs</DependentUpon>
     </Compile>
+    <Compile Include="Hakedis\frm_SozlesmeBilgileriFormu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Hakedis\frm_SozlesmeBilgileriFormu.Designer.cs">
+      <DependentUpon>frm_SozlesmeBilgileriFormu.cs</DependentUpon>
+    </Compile>
     <Compile Include="Manager\CurrentManager.cs" />
     <Compile Include="Manager\LoadingManager.cs" />
     <Compile Include="Manager\UIRuleManager.cs" />
@@ -944,6 +950,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Tedarikci\frm_YeniTeklifOlustur.tr-TR.resx">
       <DependentUpon>frm_YeniTeklifOlustur.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Hakedis\frm_SozlesmeBilgileriFormu.resx">
+      <DependentUpon>frm_SozlesmeBilgileriFormu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -1371,7 +1380,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="EmailFile\Images\Logo\" />
-    <Folder Include="Hakedis\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
