--- a/IhalematikPro/IhalematikProUI.csproj
+++ b/IhalematikPro/IhalematikProUI.csproj
@@ -660,6 +660,12 @@
     <Compile Include="Hakedis\frm_SozlesmeBilgileriFormu.Designer.cs">
       <DependentUpon>frm_SozlesmeBilgileriFormu.cs</DependentUpon>
     </Compile>
+    <Compile Include="Hakedis\frm_YeniSozlesmeYarat.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Hakedis\frm_YeniSozlesmeYarat.Designer.cs">
+      <DependentUpon>frm_YeniSozlesmeYarat.cs</DependentUpon>
+    </Compile>
     <Compile Include="Manager\CurrentManager.cs" />
     <Compile Include="Manager\LoadingManager.cs" />
     <Compile Include="Manager\UIRuleManager.cs" />
@@ -953,6 +959,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Hakedis\frm_SozlesmeBilgileriFormu.resx">
       <DependentUpon>frm_SozlesmeBilgileriFormu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Hakedis\frm_YeniSozlesmeYarat.resx">
+      <DependentUpon>frm_YeniSozlesmeYarat.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
