--- a/IhalematikProBL/IhalematikProBL.csproj
+++ b/IhalematikProBL/IhalematikProBL.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Entity\License.cs" />
     <Compile Include="Entity\Member.cs" />
     <Compile Include="Entity\OtherExpenses.cs" />
+    <Compile Include="Enum\TenderTypeEnum.cs" />
     <Compile Include="Enum\WorkerTypesEnum.cs" />
     <Compile Include="Mailing\EmailData.cs" />
     <Compile Include="Mailing\EmailSetting.cs" />
