--- a/IhalematikProBL/IhalematikProBL.csproj
+++ b/IhalematikProBL/IhalematikProBL.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Entity\ErrorLog.cs" />
     <Compile Include="Entity\ExchangeRate.cs" />
     <Compile Include="Entity\Jobber.cs" />
+    <Compile Include="Entity\JobberTender.cs" />
     <Compile Include="Entity\License.cs" />
     <Compile Include="Entity\Member.cs" />
     <Compile Include="Entity\OtherExpenses.cs" />
@@ -170,6 +171,7 @@
     <Compile Include="Provider\ErrorLogProvider.cs" />
     <Compile Include="Provider\ExchangeRateProvider.cs" />
     <Compile Include="Provider\JobberProvider.cs" />
+    <Compile Include="Provider\JobberTenderProvider.cs" />
     <Compile Include="Provider\LicenseProvider.cs" />
     <Compile Include="Provider\MaterialListProvider.cs" />
     <Compile Include="Provider\MemberProvider.cs" />
