--- a/IhalematikPro/packages.config
+++ b/IhalematikPro/packages.config
@@ -3,4 +3,5 @@
   <package id="ExcelDataReader" version="3.2.0" targetFramework="net461" />
   <package id="Microsoft.Office.Interop.Excel" version="12.0.4518.1014" targetFramework="net461" />
   <package id="Office" version="12.0.0" targetFramework="net461" />
+  <package id="Tulpep.NotificationWindow" version="1.1.25" targetFramework="net461" />
 </packages>
